Remove default for -base and apply to all ports
Previously:
  - -base applied to MSVC64
  - Cygwin64 had -base 0x10000 hard-coded
  - mingw64 didn't specify -base at all

Now:
  - The default is not to change the base address at all
  - All 3 64-bit ports support -base
  - For now, still ignored for 32-bit ports

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Next version
+- -base option consistently applied to mingw64, cygwin64 and msvc64. Default is
+  no longer specified (David Allsopp)
+
 Version 0.37
 - Bug fix: the IMAGE_SCN_LNK_NRELOC_OVFL section flag was not propertly reset when
   the number of relocations was reduced enough to fit in the 16-bit field,
