Use trampolines for RELOC_REL32 > 2GiB
relocate function now takes a pointer to the jmptbl page allocated in the
image being loaded. If a RELOC_REL32 relocation is encountered where the
offset is greater than 2GiB then 16 bytes of the page is used to generate
a trampoline to the function.

The new functionality is exposed as flexdll_relocate_v2 and passed in the
FLEXDLL_RELOCATE_V2 environment variable. The old flexdll_relocate pointer
is still passed in FLEXDLL_RELOCATE by flexdll_dlopen meaning that an
executable compiled with this new version can still load DLLs compiled
with older versions (these will simply fail if the relocations are too far
away, as before). Similarly, flexdll_init falls back to FLEXDLL_RELOCATE
if FLEXDLL_RELOCATE_V2 is not set meaning that a DLL compiled with this
new version can also be loaded by an executable compiled with older
versions.

The symbol table now has to be copied to be augmented with an extra
pointer for the trampoline, as the symtbl itself cannot be changed without
breaking this backwards compatibility.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Next version
 - -base option consistently applied to mingw64, cygwin64 and msvc64. Default is
   no longer specified (David Allsopp)
+- 64-bit ports can now always process RELOC_REL32* relocations by generating
+  trampolines for cases where the relocations are more than 32GiB away. New
+  functionality passed as flexdll_relocate_v2, which allows mixing executables
+  and DLLs compiled with and without the new features. If either executable or
+  DLL lacks the flexdll_relocate_v2 support, then it falls back to the previous
+  error message if a RELOC_REL32 is more than 2GiB away. (David Allsopp)
 
 Version 0.37
 - Bug fix: the IMAGE_SCN_LNK_NRELOC_OVFL section flag was not propertly reset when
